--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>CurrencyExchanger</finalName>
+        <finalName>ROOT</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
