fix: regex in servlet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:postgresql://postgres:5432/postgres
+db.url=jdbc:postgresql://localhost:5432/postgres
 db.username=postgres
 db.password=pgpwd4habr
 db.pool.size=5
